fix(hero): adjust font size for note section to improve readability; remove unnecessary media query from section styles

--- a/components/sections/Hero/index.scss
+++ b/components/sections/Hero/index.scss
@@ -235,7 +235,7 @@
     }
 
     &__note {
-      font-size: 4vw;
+      font-size: 3.5vw;
       text-align: justify;
       margin-top: 0.5rem;
       max-width: 90vw;
